CI: Deploy and run tests
Signed-off-by: Edward Haas <edwardh@redhat.com>

--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -9,12 +9,21 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
+env:
+  PYTHON_VERSION: "3.8"
+
 jobs:
-  noop:
-    name: noop
+  test:
+    name: Test
     runs-on: ubuntu-latest
     steps:
     - name: Check out code
       uses: actions/checkout@v2
-    - name: Hello Word
-      run: echo "Hello World"
+    - name: Setup Python
+      uses: actions/setup-python@v3
+      with:
+        python-version: ${{ env.PYTHON_VERSION }}
+    - name: Install dependencies
+      run: pip install -r requirements.txt
+    - name: Run tests
+      run: pytest -v
