--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -13,6 +13,14 @@ env:
   PYTHON_VERSION: "3.8"
 
 jobs:
+  format:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: psf/black@stable
+        with:
+          options: "--check --diff -S"
+          version: "22.1.0"
   test:
     name: Test
     runs-on: ubuntu-latest
