linter: Use flake8 to perform static analysis
Signed-off-by: Edward Haas <edwardh@redhat.com>

--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,13 @@ pytest==7.1.0
 pytest-django==4.5.2
 tomli==2.0.1
 
+# linters
+## flake8
+flake8==4.0.1
+mccabe==0.6.1
+pycodestyle==2.8.0
+pyflakes==2.4.0
+
 ## black (formatter)
 black==22.1.0
 click==8.0.4
