Adding vagrant environment for this repo Moving vagrant scripting into vagrant directory Pipfiles in vagrant directory Adding vagrant README Updating vagrant to fedora-36 Updating app_setup.sh to search for Pipfile in vagrant directory

--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -16,11 +16,16 @@ jobs:
   format:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: psf/black@stable
+      - name: Check out code
+        uses: actions/checkout@v2
+      - name: Setup Python
+        uses: actions/setup-python@v3
         with:
-          options: "--check --diff -S"
-          version: "22.1.0"
+          python-version: ${{ env.PYTHON_VERSION }}
+      - name: Install dependencies
+        run: pip install -r requirements.txt
+      - name: Run black 
+        run: black --check --diff -S .
   linter:
     name: Linter
     runs-on: ubuntu-latest
